--- a/frontend/src/components/TabsList/TabsList.module.css
+++ b/frontend/src/components/TabsList/TabsList.module.css
@@ -3,13 +3,13 @@
   gap: 30px;
   border-bottom: 1px solid var(--gray);
   margin: 64px 0 32px 0;
-  overflow-x: auto; 
-  -webkit-overflow-scrolling: touch; 
-  white-space: nowrap; 
-  padding: 0; 
-  height: auto; 
-  overflow-y: hidden; 
-  scrollbar-width: none; 
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  white-space: nowrap;
+  padding: 0;
+  height: auto;
+  overflow-y: hidden;
+  scrollbar-width: none;
   -ms-overflow-style: none;
 }
 
@@ -25,6 +25,7 @@
   cursor: pointer;
   padding-bottom: 12px;
   flex-shrink: 2;
+ justify-content: flex-start;
 }
 
 .tab:hover {
@@ -45,14 +46,19 @@
   background-color: var(--black);
 }
 
+@media screen and (min-width: 768px) {
+  .tabs {
+    margin: 80px 0 40px 0;
+  }
+}
+
 @media screen and (min-width: 1440px) {
   .tabs {
-    height: 0;
     width: 100%;
-    padding-bottom: 31px;
+    padding-bottom: 14px;
     margin: 0 0 0 40px;
   }
   .active::after {
-    bottom: -21px;
+    bottom: -14px;
   }
 }
