--- a/frontend/src/components/CategoryList/CategoryList.module.css
+++ b/frontend/src/components/CategoryList/CategoryList.module.css
@@ -57,14 +57,29 @@
   background: rgba(255, 255, 255, 0.9);
 }
 
-.icon {
-  flex-shrink: 0;
-  stroke: var(--white);
-  fill: none;
-  width: 24px;
-  height: 24px;
+.iconButton {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid #ffffff33;
+  background: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: border 0.3s;
 }
 
+.iconButton:hover {
+  border: 1px solid #ffffff66;
+}
+
+.icon {
+  stroke: var(--white);
+  fill: none;
+  width: 18px;
+  height: 18px;
+}
 .allCategories {
   background-color: var(--black);
   color: var(--white);
@@ -82,6 +97,11 @@
   .categoryListContainer {
     max-width: 704px;
   }
+  .iconButton {
+    width: 44px;
+    height: 44px;
+  }
+
   .grid {
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
