--- a/frontend/src/pages/NotFound/NotFound.module.css
+++ b/frontend/src/pages/NotFound/NotFound.module.css
@@ -1,4 +1,21 @@
-.imageNotFound {
-  width: 90%;
-  padding-left: 80px;
+.wrapper {
+  max-width: 375px;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .wrapper {
+    max-width: 704px;
+    width: 100%;
+  }
+}
+@media (min-width: 1440px) {
+  .wrapper {
+    max-width: 1280px;
+    width: 100%;
+  }
+  .imageNotFound {
+    width: 50%;
+    padding-left: 80px;
+  }
 }
