--- a/frontend/src/components/sections/Categories/Categories.module.css
+++ b/frontend/src/components/sections/Categories/Categories.module.css
@@ -38,11 +38,11 @@
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
-  transition: background-color 0.3s;
 }
 
-.backButton:hover {
-  background-color: var(--dark-gray);
+.backIcon {
+  stroke: var(--black);
+  fill: var(--black);
 }
 
 @media screen and (min-width: 768px) and (max-width: 1439px) {
