--- a/frontend/src/components/UploadPecipePhoto/UploadRecipePhoto.module.css
+++ b/frontend/src/components/UploadPecipePhoto/UploadRecipePhoto.module.css
@@ -21,6 +21,14 @@
   gap: 8px;
 }
 
+.photoUpload svg {
+  transition: transform 0.5s ease;
+}
+
+.uploadPlaceholder:hover svg{
+  transform: scale(1.3);
+}
+
 .cameraIcon {
   width: 50px;
   height: 50px;
