--- a/frontend/src/components/ui/DropdownSelector/DropdownSelector.module.css
+++ b/frontend/src/components/ui/DropdownSelector/DropdownSelector.module.css
@@ -27,6 +27,11 @@
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.select:hover{
+  color: var(--black);
 }
 
 .searchInput {
@@ -89,7 +94,7 @@
 }
 
 .dropdownItem:hover {
-  color: var(--red);
+  font-weight: 700;
 }
 
 .noResults {
