--- a/frontend/src/components/ui/PathInfo/PathInfo.module.css
+++ b/frontend/src/components/ui/PathInfo/PathInfo.module.css
@@ -20,6 +20,11 @@
   font-weight: 700;
   text-decoration: none;
   text-transform: uppercase;
+  transition: color 0.3s ease
+}
+
+.link:hover {
+  color: var(--dark-gray);
 }
 
 .slash {
