fixed error border

--- a/frontend/src/components/SignInForm/SignInForm.module.css
+++ b/frontend/src/components/SignInForm/SignInForm.module.css
@@ -39,6 +39,11 @@
   color: var(--red);
 }
 
+.inputError:focus,
+.inputError:not(:placeholder-shown) {
+  border-color: var(--red) !important;
+}
+
 .inputWrapper {
   position: relative;
 }
