--- a/frontend/src/components/Loader/Loader.module.css
+++ b/frontend/src/components/Loader/Loader.module.css
@@ -1,11 +1,237 @@
-.loaderContainer {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
+.wrapper {
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
+  width: 100vw;
+  overflow: hidden;
+}
+
+.cooking {
+  position: relative;
+  margin: 0 auto;
+  top: 0;
+  width: 600px;
+  height: 600px;
+  overflow: hidden;
+}
+
+.bubble {
+  position: absolute;
+  border-radius: 100%;
+  box-shadow: 0 0 2px var(--gray);
+  opacity: 0;
+}
+
+.bubble:nth-child(1) {
+  margin-top: 20px;
+  left: 58%;
+  width: 20px;
+  height: 20px;
+  background-color: var(--dark-gray);
+  animation: bubble 2s cubic-bezier(0.53, 0.16, 0.39, 0.96) infinite;
+}
+
+.bubble:nth-child(2) {
+  margin-top: 24px;
+  left: 52%;
+  width: 16px;
+  height: 16px;
+  background-color: #3d3d3d;
+  animation: bubble 2s ease-in-out 0.35s infinite;
+}
+
+.bubble:nth-child(3) {
+  margin-top: 14px;
+  left: 50%;
+  width: 12px;
+  height: 12px;
+  background-color: var(--black);
+  animation: bubble 1.5s cubic-bezier(0.53, 0.16, 0.39, 0.96) 0.55s infinite;
+}
+
+.bubble:nth-child(4) {
+  margin-top: 22px;
+  left: 56%;
+  width: 10px;
+  height: 10px;
+  background-color: #2b2b2b;
+  animation: bubble 1.8s cubic-bezier(0.53, 0.16, 0.39, 0.96) 0.9s infinite;
+}
+
+.bubble:nth-child(5) {
+  margin-top: 22px;
+  left: 63%;
+  width: 9px;
+  height: 9px;
+  background-color: #242424;
+  animation: bubble 1.6s ease-in-out 1s infinite;
+}
+
+.area {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 50%;
+  height: 50%;
+  background-color: transparent;
+  transform-origin: 15% 60%;
+  animation: flip 2.1s ease-in-out infinite;
+}
+
+.sides {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform-origin: 15% 60%;
+  animation: switchSide 2.1s ease-in-out infinite;
+}
+
+.handle {
+  position: absolute;
+  bottom: 18%;
+  right: 80%;
+  width: 35%;
+  height: 20%;
+  background-color: transparent;
+  border-top: 8px solid var(--dark-gray);
+  border-left: 8px solid transparent;
+  border-radius: 100%;
+  transform: rotate(20deg) rotateX(0deg) scale(1.3, 0.9);
+}
+
+.pan {
+  position: absolute;
+  bottom: 20%;
+  right: 30%;
+  width: 50%;
+  height: 8%;
+  background-color: var(--dark-gray);
+  border-radius: 0 0 22px 22px;
+  transform-origin: -15% 0;
+}
+
+.pancake {
+  position: absolute;
+  top: 144px;
+  width: 100%;
+  height: 100%;
+  transform: rotateX(85deg);
+  animation: jump 2.1s ease-in-out infinite;
+}
+
+.pastry {
+  position: absolute;
+  bottom: 156px;
+  right: 37%;
+  width: 40%;
+  height: 45%;
+  background-color: var(--dark-gray);
+  box-shadow: 0 0 3px 0 var(--dark-gray);
+  border-radius: 100%;
+  transform-origin: -20% 0;
+  animation: fly 2.1s ease-in-out infinite;
+}
+
+@keyframes jump {
+  0% {
+    top: 144px;
+    transform: rotateX(85deg);
+  }
+  25% {
+    top: 60px;
+    transform: rotateX(0deg);
+  }
+  50% {
+    top: 180px;
+    transform: rotateX(85deg);
+  }
+  75% {
+    transform: rotateX(0deg);
+  }
+  100% {
+    transform: rotateX(85deg);
+  }
+}
+
+@keyframes flip {
+  0% {
+    transform: rotate(0deg);
+  }
+  5% {
+    transform: rotate(-27deg);
+  }
+  30%,
+  50% {
+    transform: rotate(0deg);
+  }
+  55% {
+    transform: rotate(27deg);
+  }
+  83.3%,
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+@keyframes switchSide {
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(180deg);
+  }
+  100% {
+    transform: rotateY(0deg);
+  }
+}
+
+@keyframes fly {
+  0% {
+    bottom: 156px;
+    transform: rotate(0deg);
+  }
+  10% {
+    bottom: 240px;
+  }
+  50% {
+    bottom: 156px;
+    transform: rotate(-190deg);
+  }
+  80% {
+    bottom: 240px;
+  }
+  100% {
+    bottom: 156px;
+    transform: rotate(0deg);
+  }
+}
+
+@keyframes bubble {
+  0% {
+    transform: scale(0.15);
+    top: 480px;
+    opacity: 0;
+  }
+  50% {
+    transform: scale(1.1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0.33);
+    top: 360px;
+    opacity: 0;
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 0.25;
+  }
+  50% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0.25;
+  }
 }
