--- a/frontend/src/components/Navigation/Navigation.module.css
+++ b/frontend/src/components/Navigation/Navigation.module.css
@@ -58,7 +58,11 @@
 }
 .lightLink:hover,
 .darkLink:hover {
+  border: 1px solid var(--gray);
+  border-radius: 30px;
   transform: scale(1.05);
+  color: var(--black);
+  background-color: var(--white);
 }
 
 .lightActive {
