--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,6 +22,14 @@
   --gray: #bfbebe;
   --white: #ffffff;
   --red: #a10707;
+  --pan-color: #333333;
+  --bubble-yellow: #ffc727;
+  --bubble-dark: #3d3d3d;
+  --bubble-black: #2b2b2b;
+  --bubble-deep: #242424;
+  --container-size: 600px;
+  --bubble-shadow: 0 0 2px var(--bubble-yellow);
+  --bubble-animation: bubble 2s cubic-bezier(0.53, 0.16, 0.39, 0.96) infinite;
 }
 
 *::before,
