--- a/frontend/src/components/Button/buttonVariants.module.css
+++ b/frontend/src/components/Button/buttonVariants.module.css
@@ -4,7 +4,7 @@
   color: var(--white);
   border: 1px solid var(--light-gray);
   font-size: 12px;
-  line-height: 18px;
+  line-height: 1.5;
   letter-spacing: -0.24px;
 }
 
@@ -18,7 +18,7 @@
   color: var(--black);
   border: 1px solid var(--dark-gray);
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: -0.32px;
 }
 
@@ -31,8 +31,8 @@
   padding: 14px 171px;
   background: var(--gray);
   color: var(--white);
-  font-size: 16px;
-  line-height: 24px;
+  font-size: var(--base-font-size);
+  line-height: 1.5;
   letter-spacing: -0.32px;
   cursor: not-allowed;
   opacity: 0.8;
@@ -45,7 +45,7 @@
   color: var(--black);
   border: 1px solid var(--gray);
   font-size: 12px;
-  line-height: 18px;
+  line-height: 1.5;
   letter-spacing: -0.24px;
   min-width: 90px;
   text-align: center;
