--- a/frontend/src/components/ListItems/ListItems.module.css
+++ b/frontend/src/components/ListItems/ListItems.module.css
@@ -17,10 +17,10 @@
 
   color: var(--dark-gray);
   text-align: center;
-  font-size: 16px;
+  font-size: var(--base-font-size);
   font-style: normal;
   font-weight: 500;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: -0.32px;
 
   white-space: normal;
