--- a/frontend/src/components/MobileMenu/MobileMenu.module.css
+++ b/frontend/src/components/MobileMenu/MobileMenu.module.css
@@ -32,7 +32,7 @@
 }
 
 .link {
-  font-family: 'Mulish', sans-serif;
+  font-family: var(--base-font);
   font-size: 14px;
   font-weight: 700;
   line-height: 1.4;
