--- a/frontend/src/components/Navigation/Navigation.module.css
+++ b/frontend/src/components/Navigation/Navigation.module.css
@@ -38,7 +38,7 @@
 
 .link {
   padding: 14px;
-  font-family: 'Mulish', sans-serif;
+  font-family: var(--base-font);
   font-size: 12px;
   font-weight: 700;
   line-height: 1.5;
