--- a/frontend/src/components/RecipeMainInfo/RecipeMainInfo.module.css
+++ b/frontend/src/components/RecipeMainInfo/RecipeMainInfo.module.css
@@ -1,8 +1,3 @@
-/* .wrap {
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-} */
 .recipeMainInfo {
   padding-top: 0;
   margin-bottom: 32px;
@@ -110,7 +105,7 @@
   }
 
   .description {
-    font-size: 16px;
+    font-size: var(--base-font-size);
     font-weight: 500;
     color: var(--black);
     margin-bottom: 20px;
@@ -131,7 +126,7 @@
   }
 
   .authorName {
-    font-size: 16px;
+    font-size: var(--base-font-size);
     font-weight: 700;
     color: var(--black);
     cursor: pointer;
@@ -149,7 +144,7 @@
   }
 
   .description {
-    font-size: 16px;
+    font-size: var(--base-font-size);
     color: var(--dark-gray);
     margin-bottom: 20px;
     line-height: 1.5;
@@ -167,7 +162,7 @@
   }
 
   .authorName {
-    font-size: 16px;
+    font-size: var(--base-font-size);
     line-height: 1.5;
     letter-spacing: -0.32px;
   }
