--- a/frontend/src/components/sections/Footer/Footer.module.css
+++ b/frontend/src/components/sections/Footer/Footer.module.css
@@ -34,7 +34,7 @@
 
   font-size: 14px;
   font-weight: 500;
-  line-height: 20px;
+  line-height: 1.43;
   letter-spacing: -0.28px;
   color: var(--dark-gray);
   text-align: center;
@@ -49,7 +49,7 @@
     padding: 0 32px 40px;
   }
   .copyright {
-    font-size: 16px;
+    font-size: var(--base-font-size);
     line-height: 24px;
     letter-spacing: -0.32px;
   }
