--- a/frontend/src/components/ui/UserAvatar/UserAvatar.module.css
+++ b/frontend/src/components/ui/UserAvatar/UserAvatar.module.css
@@ -53,7 +53,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  overflow: hidden; /* keep this */
+  overflow: hidden; 
   position: relative;
 }
 
