--- a/frontend/src/components/AddRecipeForm/AddRecipeForm.module.css
+++ b/frontend/src/components/AddRecipeForm/AddRecipeForm.module.css
@@ -74,7 +74,13 @@
   text-transform: uppercase;
   transition: background-color 0.2s ease;
 }
-
+.autosaveNote {
+  font-size: 12px;
+  color: var(--gray);
+  text-align: right;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
 @media (min-width: 768px) {
   .form {
     display: flex;
