--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -30,6 +30,7 @@
   --container-size: 600px;
   --bubble-shadow: 0 0 2px var(--bubble-yellow);
   --bubble-animation: bubble 2s cubic-bezier(0.53, 0.16, 0.39, 0.96) infinite;
+  --transition-dur-and-func: 750ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 *::before,
