--- a/frontend/src/components/TeamModal/TeamModal.module.css
+++ b/frontend/src/components/TeamModal/TeamModal.module.css
@@ -67,14 +67,14 @@
 .member {
   font-weight: 500;
   font-size: 18px;
-  color: var(--white);
+  color: var(--black);
   margin-bottom: 10px;
 }
 
 .role {
   font-weight: 400;
   font-size: 16px;
-  color: rgba(244, 244, 244, 0.6);
+  color: var(--bubble-dark);
   margin-bottom: 10px;
 }
 
