--- a/frontend/src/components/MobileMenu/MobileMenu.module.css
+++ b/frontend/src/components/MobileMenu/MobileMenu.module.css
@@ -8,6 +8,7 @@
   gap: 32px;
   height: 100%;
   width: 100%;
+  min-width: 320px;
   z-index: 999;
   padding: 24px;
   background-color: var(--black);
@@ -15,6 +16,9 @@
 }
 
 .wrapper {
+  width: 100%;
+  max-width: 375px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
