--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -94,6 +94,8 @@ button {
   margin: 0 auto;
   padding: 0 16px;
   width: 100%;
+  min-width: 320px;
+  max-width: 375px;
 }
 
 @media screen and (min-width: 768px) {
