--- a/frontend/src/components/RecipePreview/RecipePreview.module.css
+++ b/frontend/src/components/RecipePreview/RecipePreview.module.css
@@ -9,6 +9,9 @@
 }
 
 .recipePreviewCardImage {
+  width: 75px;
+  height: 75px;
+  max-height: 75px;
   transition: transform 0.4s ease;
   object-fit: cover;
   border-radius: 15px;
@@ -86,6 +89,12 @@
 
   .recipePreviewCardActions {
     margin-left: 32px;
+  }
+
+  .recipePreviewCardImage {
+    width: 100px;
+    height: 100px;
+    max-height: 100px;
   }
 
   .imageLink:hover .recipePreviewCardImage {
